packages/module/src/MessageBox/MessageBox.scss
@import './JumpButton';

.pf-chatbot__messagebox {
  height: 100%;
  overflow-y: auto;
  display: flex;
  flex-direction: column;
  row-gap: var(--pf-t--global--spacer--sm);
  padding: var(--pf-t--global--spacer--lg);
}

.pf-chatbot__messagebox--bottom {
  justify-content: flex-end;
}

// hide from view but not assistive technologies
// https://css-tricks.com/inclusively-hidden/
.pf-chatbot__messagebox-announcement {
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

@media screen and (min-width: 64rem) {
  .pf-chatbot--embedded,
  .pf-chatbot--fullscreen {
    .pf-chatbot__messagebox {
      max-width: 60rem;
      width: 100%;
    }
  }
}

